got rid of records