@@ -26,20 +26,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.testng:testng:7.3.0'
-    testImplementation 'io.rest-assured:rest-assured:4.3.3'
     testImplementation 'org.assertj:assertj-core:3.19.0'
-
-
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += '--enable-preview'
-}
-tasks.withType(Test).configureEach {
-    jvmArgs("--enable-preview")
 }
 
 test {
